fix styling issue with text wrapping

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -112,6 +112,7 @@ form {
   }
   p {
     padding: 10px;
+    white-space: pre-wrap;
   }
   h2 {
     margin: 10px 0 5px 10px;
